1. Метод .of [#328631]